<resources>
    <string name="app_name">Government Pot Holes</string>
    <string name="nav_header_title">App Name</string>
    <string name="nav_header_subtitle">appname@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="name">Username</string>
    <string name="sign_up_heading">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="_3_contacts_for_">3 Contacts</string>
    <string name="emergency">Emergency</string>
    <string name="women_safety_app">Womans Safety App</string>
    <string name="login_sign_up">Login/SignUp</string>
    <string name="email_id">email</string>
    <string name="login_password">passwoed</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_page">Sign Up</string>
    <string name="BrightnessControl">Brightness Control</string>
    <string name="theme_font">Font Size</string>
    <string name="theme_mode">Mode</string>
    <string name="theme_dark_mode">Dark Mode</string>
    <string name="theme_text">Make the text on screen smaller or larger</string>

    <!-- Intro page Strings -->
    <string name="image_contentDescription">Content Description</string>
    <string name="lets_get_started_text">Let\'s Get Started !!</string>
    <string name="intro_text_description">Enhance your security with SkillUp Women Safety App</string>
    <string name="intro_sign_up">Sign Up</string>
    <string name="intro_btn_signIn">Sign In</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- signup page Strings -->
    <string name="sign_up_description_text">Enter your name, email id, password and 3 emergency contacts. </string>
    <string name="sign_up_page_name">Name</string>
    <string name="sign_up_page_password">Password</string>
    <string name="sign_up_page_email">Email</string>
    <string name="sign_up_page_confirm_password">Confirm Password</string>
    <string name="sign_up_page_title">Sign Up</string>
    <string name="sign_up_page_btn_sign_up">Sign Up</string>
    <string name="sign_up_page_contact1">First Contact Number</string>
    <string name="sign_up_page_contact2">Second Contact Number</string>
    <string name="sign_up_page_contact3">Third Contact Number</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in_page_title">Sign In</string>
    <string name="sign_in_page_btn">Sign In</string>
    <string name="sign_in_page_description_text">Enter your email and password to register with us.</string>

    <!-- Base activity string -->
    <string name="please_click_back_again_to_exit">Please click back again to Exit</string>
    <string name="please_wait">Please Wait&#8230; </string>

    <!-- Drawer layout strings -->
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_profile">Profile</string>
    <string name="nav_myContacts">My Contacts</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_theme">Theme</string>
    <string name="nav_help">Help</string>
    <string name="nav_aboutUs">About Us</string>

    <!-- Profile activity strings -->
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="email">Email</string>
    <string name="my_profile_title">Profile</string>
    <string name="contact1">Contact1</string>
    <string name="contact2">Contact2</string>
    <string name="contact3">Contact3</string>

    <!-- Help activity srtings -->
    <string name="instructions_to_use">Instructions to use:</string>
    <string name="instructions1">1. Enter contact details of three persons whom you would like to notify in case of an emergency</string>
    <string name="instructions2">2. Add an emergency (favourite) contact to whom you would like to make a call in case of an emergency</string>
    <string name="instructions3">3. Shake your phone if you feel unsafe </string>
    <string name="instructions4">4. The app will send notifications to all the three contacts containing a link to track the live location from where the phone has been shaked</string>
    <string name="instructions5">5. The emergency (favourite) contact will receive a call along with the notification</string>
    <string name="help_title">Help</string>

    <!-- About Us Activity strings -->
    <string name="about_us_description1">This application has been developed by our group of 5 members:</string>
    <string name="about_us_name1">1. Vedika Mamidwar </string>
    <string name="about_us_name2">2. Neha Binwal </string>
    <string name="about_us_name3">3. Alicia Sunny </string>
    <string name="about_us_name4">4. Sneha Balwani</string>
    <string name="about_us_name5">5. Sneha Takle</string>
    <string name="about_us_description2.0">1. Palak Mantry</string>
    <string name="about_us_description2.1">2. Hrushikesh Bhagwat</string>
    <string name="about_us_description2.2">3. Saif Kazi </string>
    <string name="about_us_description3">We are aspiring students of VJTI from the branches IT and EXTC, currently studying in 2nd and 3rd year.</string>
    <string name="about_us_description4">Women Safety app is a small attempt from our side to make women feel safe wherever they are.</string>
    <string name="about_us_description5">This project is part of Skill-Up - A platform organized by two coding committees of VJTI, Developer Student Clubs (DSC) and Community of Coders (COC).</string>
    <string name="about_us_description6">We hope that this app will provide a user friendly experience and is able to fulfil all the requirements of the user.</string>
    <string name="about_app">About App</string>
    <string name="about_app_description1">Women’s safety has always been an issue of grave concern. This problem is compounded during travel, especially while travelling alone.</string>
    <string name="about_app_description2">This app aims to be a one-stop solution for such safety concerns. It enables women to get urgent and timely help in case they are in danger</string>
    <string name="about_app_description3">By sending notifications and calls just by shaking the phone, this app serves the purpose of helping women feel safe wherever they are.</string>
    <string name="about_us_title">About Us</string>

    <!-- main page strings -->
    <string name="know_more_about_the_app">To know more about the app click below button.</string>
    <string name="main_page_description">An App developed for the safety of women</string>
    <string name="be_alert_be_safe">Be Alert! Be Safe!</string>
    <string name="privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="menu_theme">Settings</string>
    <string name="about_us_description0">Under the mentorship of :</string>
    <string name="contact">Phone number</string>
    <string name="file_complaint">File Complaint</string>
    <string name="add_5_images">You can add upto 5 images to describe the pot hole</string>
    <string name="add_image">Add images</string>
    <string name="add_location">Add Location</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="account_login">Login to your official account</string>


</resources>