<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HelpActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_about_app_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/be_alert_be_safe"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="260dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/main_page_image" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/main_page_description"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/know_more_about_the_app"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/about_app_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_app"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>